# wp-editor

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
_gal/tpl/: Cargo.toml
src/: main.rs
src/api/: debug.rs  mod.rs
tests/api/: system_test.rs
web/: package-lock.json  package.json  vite.config.js
web/src/: App.jsx
web/src/services/: debug.js
web/src/styles/: theme.css
web/src/views/components/: Navigation.jsx
web/src/views/components/CodeJarEditor/: CodeJarEditor.jsx  CodeJarEditor.module.css  Editor.module.css  index.jsx
web/src/views/components/MonacoEditor/: CodeMirrorEditor.jsx  Editor.module.css  index.jsx
web/src/views/pages/simulate-debug/: index.jsx
