[package]
name = "wp-editor"
version = "0.1.17"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
actix-web = "~4.12"
actix-files = "~0.6"
tracing = "~0.1"
simple-log = "2.4.0"
small_ctor = "~0.1"
cargo_metadata = "~0.20"
tokio = { version = "~1.48", features = ["full"] }
tokio-util = "=0.7.10"
rust-embed = "~6.8"
zip = "~0.6"
zip-extract = "~0.1"
actix-multipart = "~0.6"
futures-util = "~0.3"
mime_guess = "~2"
config = "~0.14"
toml = "~0.8"
chrono = { version = "~0.4", features = ["serde"] }
thiserror = "~1.0"
strum = { version = "~0.27", features = ["derive"] }
regex = "~1.12"
anyhow = "~1"

wp_wpl = { package = "wp-lang", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_oml = { package = "wp-oml", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_parser = { package = "wp-parser", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_proj = { package = "wp-proj", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_knowledge = { package = "wp-knowledge", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_data_utils = { package = "wp-data-utils", git = "https://github.com/wp-labs/wp-engine", tag = "v1.5.0-beta" }
wp_model_core = { package = "wp-model-core", git = "https://github.com/wp-labs/wp-open-api", tag = "v0.5.1-beta"  }
wp_parse_api = { package = "wp-parse-api", git = "https://github.com/wp-labs/wp-open-api", tag = "v0.5.1-beta"  }
wp_data_fmt = { package = "wp-data-fmt", git = "https://github.com/wp-labs/wp-infras", tag = "v0.5.10-beta" }

# PostgreSQL 数据库支持 - SeaORM
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
wp-editor-migrations = { path = "crates/migrations" }

[build-dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
wp_docs = { git = "https://github.com/wp-labs/wp-docs.git", branch = "main" }